--- a/client/src/app/pages/login/login.component.scss
+++ b/client/src/app/pages/login/login.component.scss
@@ -10,5 +10,10 @@ mat-card {
 
   .button-container {
     display: flex;
+    padding-top: 8px;
+
+    button + button {
+      margin-left: 8px;
+    }
   }
 }
