--- a/client/src/app/pages/sign-up/sign-up.component.html
+++ b/client/src/app/pages/sign-up/sign-up.component.html
@@ -1,1 +1,32 @@
-<p>sign-up works!</p>
+<mat-card>
+  <form class="sign-up-form">
+    <mat-form-field>
+      <mat-label>Username</mat-label>
+      <input matInput type="text" />
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>E-mail</mat-label>
+      <input matInput type="text" />
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Password</mat-label>
+      <input matInput type="password" />
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Password again</mat-label>
+      <input matInput type="password" />
+    </mat-form-field>
+
+    <mat-checkbox color="primary">Log me in</mat-checkbox>
+
+    <div class="button-container">
+      <button mat-flat-button color="primary">Sign Up</button>
+      <button mat-stroked-button color="default" (click)="navigateToLogin()">
+        Login
+      </button>
+    </div>
+  </form>
+</mat-card>
