feat(auth-client): Setup the basics of authentication

--- a/client/src/app/pages/auth/login/login.component.scss
+++ b/client/src/app/pages/auth/login/login.component.scss
@@ -1,7 +1,12 @@
+:host ::ng-deep {
+  display: flex;
+  justify-content: center;
+}
+
 mat-card {
   width: fit-content;
 
-  .sign-up-form {
+  .login-form {
     min-width: 300px;
     max-width: 500px;
     display: flex;
