--- a/client/src/app/pages/auth/sign-up/sign-up.component.scss
+++ b/client/src/app/pages/auth/sign-up/sign-up.component.scss
@@ -1,11 +1,21 @@
+:host ::ng-deep {
+  display: flex;
+  justify-content: center;
+}
+
 mat-card {
   width: fit-content;
 
-  .login-form {
+  .sign-up-form {
     min-width: 300px;
     max-width: 500px;
     display: flex;
     flex-direction: column;
+  }
+
+  .error {
+    padding-top: 8px;
+    color: red;
   }
 
   .button-container {
