feat(auth): Login after sign up

--- a/client/src/app/pages/auth/sign-up/sign-up.component.html
+++ b/client/src/app/pages/auth/sign-up/sign-up.component.html
@@ -82,7 +82,9 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-checkbox color="primary">Log me in</mat-checkbox>
+    <mat-checkbox color="primary" formControlName="loginAfter"
+      >Log me in</mat-checkbox
+    >
 
     <mat-error *ngIf="signUpForm.hasError('missmatch')">
       The passwords should match!
