feat(auth): Implement some basic features for auth
- Set up UserService for later to be able to validate username and email
- Profile page and redirect after authentication
- Minor changes

--- a/client/src/app/app.template.html
+++ b/client/src/app/app.template.html
@@ -1,2 +1,10 @@
-<header>DucktorBlog</header>
+<header>
+  <label (click)="goToHome()">DucktorBlog</label>
+  <button mat-raised-button color="primary" (click)="navigateToAuth('login')">
+    Login
+  </button>
+  <button mat-raised-button color="primary" (click)="navigateToAuth('sign-up')">
+    Sign up
+  </button>
+</header>
 <router-outlet></router-outlet>
