--- a/apps/frontend/src/app/app.template.html
+++ b/apps/frontend/src/app/app.template.html
@@ -1,5 +1,5 @@
 <header>
-  <label (click)="goToHome()">DucktorBlog</label>
+  <label (click)="goToHome()">ProgNotes</label>
   <button mat-raised-button color="primary" (click)="navigateToAuth('login')">
     Login
   </button>
